--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="description" content="Web site created using create-react-app" />
+	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+	<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -25,15 +23,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
-    <!--All Css Here-->
-    
+	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+	<!--All Css Here-->
+
 	<!-- Droid Font CSS-->
-    <link rel="stylesheet" href="assets/css/droid.css">
+	<link rel="stylesheet" href="assets/css/droid.css">
 	<!-- Icofont CSS-->
-    <link rel="stylesheet" href="assets/css/icofont.css">
-    <!-- Font Awesome CSS-->
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="assets/css/icofont.css">
+	<!-- Font Awesome CSS-->
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
 	<!-- Animate CSS-->
 	<link rel="stylesheet" href="assets/css/animate.css">
@@ -55,12 +53,13 @@
 	<link rel="stylesheet" href="assets/css/responsive.css">
 	<!-- Modernizr Js -->
 	<script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
-    <title>My First React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+	<title>My First React App</title>
+</head>
+
+<body>
+	<noscript>You need to enable JavaScript to run this app.</noscript>
+	<div id="root"></div>
+	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -71,8 +70,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-     <!--All Js Here-->
-    
+	<!--All Js Here-->
+
 	<!--Jquery 1.12.4-->
 	<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
 	<!--Waypoints-->
@@ -103,5 +102,6 @@
 	<script src="assets/js/plugins.js"></script>
 	<!--Main Js-->
 	<script src="assets/js/main.js"></script>
-  </body>
+</body>
+
 </html>
